News UAT/force-app/main/default/objects/Opportunity__x/fields/Site_c__c.field-meta.xml
<CustomField>
    <fullName>Site_c__c</fullName>
    <externalDeveloperName>Site__c</externalDeveloperName>
    <label>Site</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Airlie Beach</fullName>
            </value>
            <value>
                <fullName>APNAP - All Sites</fullName>
            </value>
            <value>
                <fullName>APNAP - CityLife</fullName>
            </value>
            <value>
                <fullName>APNAP - Commercial Property All Dailies</fullName>
            </value>
            <value>
                <fullName>APNAP - Commercial Property Northern Dailies</fullName>
            </value>
            <value>
                <fullName>APNAP - Commercial Property Southern Dailies</fullName>
            </value>
            <value>
                <fullName>APNAP Dailies - All</fullName>
            </value>
            <value>
                <fullName>APNAP Dailies – NSW</fullName>
            </value>
            <value>
                <fullName>APNAP Dailies – Qld</fullName>
            </value>
            <value>
                <fullName>APNAP - New Zealand</fullName>
            </value>
            <value>
                <fullName>APNAP - Rural Weekly</fullName>
            </value>
            <value>
                <fullName>APNAP - Style</fullName>
            </value>
            <value>
                <fullName>Biloela</fullName>
            </value>
            <value>
                <fullName>Bundaberg</fullName>
            </value>
            <value>
                <fullName>Byron</fullName>
            </value>
            <value>
                <fullName>CCC KAE</fullName>
            </value>
            <value>
                <fullName>Chinchilla</fullName>
            </value>
            <value>
                <fullName>Coffs Harbour</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Fraser Coast</fullName>
            </value>
            <value>
                <fullName>Gladstone</fullName>
            </value>
            <value>
                <fullName>Grafton</fullName>
            </value>
            <value>
                <fullName>Gympie</fullName>
            </value>
            <value>
                <fullName>Ipswich</fullName>
            </value>
            <value>
                <fullName>Kingaroy</fullName>
            </value>
            <value>
                <fullName>Lismore</fullName>
            </value>
            <value>
                <fullName>Mackay</fullName>
            </value>
            <value>
                <fullName>Mt Isa</fullName>
            </value>
            <value>
                <fullName>Multi Publication</fullName>
            </value>
            <value>
                <fullName>Rockhampton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>