News UAT/force-app/main/default/objects/Opportunity__x/fields/Site_NZ_c__c.field-meta.xml
<CustomField>
    <fullName>Site_NZ_c__c</fullName>
    <externalDeveloperName>Site_NZ__c</externalDeveloperName>
    <label>Site NZ</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NZ Herald</fullName>
            </value>
            <value>
                <fullName>NZ Magazines</fullName>
            </value>
            <value>
                <fullName>NZ Online</fullName>
            </value>
            <value>
                <fullName>NZ Herald NSM</fullName>
            </value>
            <value>
                <fullName>Northern Advocate</fullName>
            </value>
            <value>
                <fullName>Bay of Plenty Times</fullName>
            </value>
            <value>
                <fullName>Rotorua Daily Post</fullName>
            </value>
            <value>
                <fullName>Hawkes Bay Today</fullName>
            </value>
            <value>
                <fullName>Wanganui Chronicle</fullName>
            </value>
            <value>
                <fullName>Wairarapa Times Age</fullName>
            </value>
            <value>
                <fullName>Christchurch Star</fullName>
            </value>
            <value>
                <fullName>Presspak</fullName>
            </value>
            <value>
                <fullName>CCN</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Manawatu Guardian</fullName>
            </value>
            <value>
                <fullName>Stratford Press</fullName>
            </value>
            <value>
                <fullName>Oamaru Mail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>