News UAT/force-app/main/default/objects/Opportunity__x/fields/StageName__c.field-meta.xml
<CustomField>
    <fullName>StageName__c</fullName>
    <externalDeveloperName>StageName</externalDeveloperName>
    <label>Stage</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Proposal/Price Quote</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review</fullName>
            </value>
            <value>
                <fullName>NewsXtend IO Required</fullName>
            </value>
            <value>
                <fullName>NewsXtend IO Added</fullName>
            </value>
            <value>
                <fullName>Contracted 99.99%</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>Closed Lost/Abandoned</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>