News UAT/force-app/main/default/objects/Opportunity__x/fields/Start_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_c__c</fullName>
    <externalDeveloperName>Start_Date__c</externalDeveloperName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>