News UAT/force-app/main/default/objects/Opportunity__x/fields/Start_Month_c__c.field-meta.xml
<CustomField>
    <fullName>Start_Month_c__c</fullName>
    <externalDeveloperName>Start_Month__c</externalDeveloperName>
    <label>Start Month</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>