News UAT/force-app/main/default/objects/Opportunity__x/fields/Start_Week_c__c.field-meta.xml
<CustomField>
    <fullName>Start_Week_c__c</fullName>
    <externalDeveloperName>Start_Week__c</externalDeveloperName>
    <label>Start Week</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jan, Week 1</fullName>
            </value>
            <value>
                <fullName>Jan, Week 2</fullName>
            </value>
            <value>
                <fullName>Jan, Week 3</fullName>
            </value>
            <value>
                <fullName>Jan, Week 4</fullName>
            </value>
            <value>
                <fullName>Jan, Week 5</fullName>
            </value>
            <value>
                <fullName>Feb, Week 1</fullName>
            </value>
            <value>
                <fullName>Feb, Week 2</fullName>
            </value>
            <value>
                <fullName>Feb, Week 3</fullName>
            </value>
            <value>
                <fullName>Feb, Week 4</fullName>
            </value>
            <value>
                <fullName>Mar, Week 1</fullName>
            </value>
            <value>
                <fullName>Mar, Week 2</fullName>
            </value>
            <value>
                <fullName>Mar, Week 3</fullName>
            </value>
            <value>
                <fullName>Mar, Week 4</fullName>
            </value>
            <value>
                <fullName>Apr, Week 1</fullName>
            </value>
            <value>
                <fullName>Apr, Week 2</fullName>
            </value>
            <value>
                <fullName>Apr, Week 3</fullName>
            </value>
            <value>
                <fullName>Apr, Week 4</fullName>
            </value>
            <value>
                <fullName>Apr, Week 5</fullName>
            </value>
            <value>
                <fullName>May, Week 1</fullName>
            </value>
            <value>
                <fullName>May, Week 2</fullName>
            </value>
            <value>
                <fullName>May, Week 3</fullName>
            </value>
            <value>
                <fullName>May, Week 4</fullName>
            </value>
            <value>
                <fullName>Jun, Week 1</fullName>
            </value>
            <value>
                <fullName>Jun, Week 2</fullName>
            </value>
            <value>
                <fullName>Jun, Week 3</fullName>
            </value>
            <value>
                <fullName>Jun, Week 4</fullName>
            </value>
            <value>
                <fullName>Jul, Week 1</fullName>
            </value>
            <value>
                <fullName>Jul, Week 2</fullName>
            </value>
            <value>
                <fullName>Jul, Week 3</fullName>
            </value>
            <value>
                <fullName>Jul, Week 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>