News UAT/force-app/main/default/objects/Opportunity__x/fields/Strategic_c__c.field-meta.xml
<CustomField>
    <fullName>Strategic_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Strategic__c</externalDeveloperName>
    <label>Strategic</label>
    <type>Checkbox</type>
</CustomField>