News UAT/force-app/main/default/objects/Opportunity__x/fields/Subject_c__c.field-meta.xml
<CustomField>
    <fullName>Subject_c__c</fullName>
    <externalDeveloperName>Subject__c</externalDeveloperName>
    <label>Subject</label>
    <type>TextArea</type>
</CustomField>