News UAT/force-app/main/default/objects/Opportunity__x/fields/Target_Area_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Area_c__c</fullName>
    <externalDeveloperName>Target_Area__c</externalDeveloperName>
    <label>Target Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rural</fullName>
            </value>
            <value>
                <fullName>Town</fullName>
            </value>
            <value>
                <fullName>Metro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>