News UAT/force-app/main/default/objects/Opportunity__x/fields/Target_Segment_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Segment_c__c</fullName>
    <externalDeveloperName>Target_Segment__c</externalDeveloperName>
    <label>Target Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>High Growth</fullName>
            </value>
            <value>
                <fullName>Key</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>