News UAT/force-app/main/default/objects/Opportunity__x/fields/Time_Created_c__c.field-meta.xml
<CustomField>
    <fullName>Time_Created_c__c</fullName>
    <externalDeveloperName>Time_Created__c</externalDeveloperName>
    <label>Time Created</label>
    <readOnlyProxy>true</readOnlyProxy>
    <type>DateTime</type>
</CustomField>