News UAT/force-app/main/default/objects/Opportunity__x/fields/User_c__c.field-meta.xml
<CustomField>
    <fullName>User_c__c</fullName>
    <externalDeveloperName>User__c</externalDeveloperName>
    <label>User</label>
    <length>18</length>
    <type>Text</type>
</CustomField>